--- a/Domestic Violence Pizza App/Davey's Pizza App/Base.lproj/Main.storyboard
+++ b/Domestic Violence Pizza App/Davey's Pizza App/Base.lproj/Main.storyboard
@@ -10,6 +10,19 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="WJk-Em-BN5">
+            <objects>
+                <navigationController id="uHK-KA-xMK" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="hUq-EV-1n5">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tiK-AE-Qy8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3085" y="122"/>
+        </scene>
         <!--StartingView-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -25,6 +38,9 @@
                                 <state key="normal" title="QUICK ORDER">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="OUG-9M-cQI" kind="push" id="NRd-Cs-u7X"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h3x-om-Hiq">
                                 <rect key="frame" x="109" y="413" width="150" height="50"/>
@@ -33,6 +49,9 @@
                                 <state key="normal" title="CUSTOMIZE">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="MFW-tv-FaP" kind="push" id="NAU-Mp-0DW"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ODL-i1-NdU">
                                 <rect key="frame" x="16" y="617" width="147" height="30"/>
@@ -48,10 +67,6 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="Start" id="7Ze-62-Tab" userLabel="Start"/>
-                    <connections>
-                        <outlet property="Customize" destination="h3x-om-Hiq" id="Tqc-hN-Q7r"/>
-                        <outlet property="QuickOrder" destination="6vT-hP-Vbp" id="zYC-7t-jgz"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
